--- a/carousel.css
+++ b/carousel.css
@@ -90,12 +90,22 @@ input[name="carousel-css"][value="slide-10"]:checked ~ .carousel-wrapper .carous
 input[name="carousel-css"][value="slide-11"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(12),
 input[name="carousel-css"][value="slide-12"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(13),
 input[name="carousel-css"][value="slide-13"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(14),
-input[name="carousel-css"][value="slide-14"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(15){
+input[name="carousel-css"][value="slide-14"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(15),
+input[name="carousel-css"][value="slide-15"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(16),
+input[name="carousel-css"][value="slide-16"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(17),
+input[name="carousel-css"][value="slide-17"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(18),
+input[name="carousel-css"][value="slide-18"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(19),
+input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(20){
     transition: 0.5s transform;
     transform: translate(100%, 0);
 }
 
 input[name="carousel-css"][value="slide-1"]:checked ~ .carousel-wrapper .carousel-slide:last-child,
+input[name="carousel-css"][value="slide-20"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(19),
+input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(18),
+input[name="carousel-css"][value="slide-18"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(17),
+input[name="carousel-css"][value="slide-17"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(16),
+input[name="carousel-css"][value="slide-16"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(15),
 input[name="carousel-css"][value="slide-15"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(14),
 input[name="carousel-css"][value="slide-14"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(13),
 input[name="carousel-css"][value="slide-13"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(12),
@@ -131,7 +141,12 @@ input[name="carousel-css"][value="slide-11"]:checked ~ .carousel-wrapper .carous
 input[name="carousel-css"][value="slide-12"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(12),
 input[name="carousel-css"][value="slide-13"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(13),
 input[name="carousel-css"][value="slide-14"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(14),
-input[name="carousel-css"][value="slide-15"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(15){
+input[name="carousel-css"][value="slide-15"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(15),
+input[name="carousel-css"][value="slide-16"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(16),
+input[name="carousel-css"][value="slide-17"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(17),
+input[name="carousel-css"][value="slide-18"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(18),
+input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(19),
+input[name="carousel-css"][value="slide-20"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(20){
     transition: 0.5s transform;
     transform: translate(0, 0);
     opacity: 1;
@@ -189,7 +204,12 @@ input[name="carousel-css"][value="slide-11"]:checked ~ label[data-value="slide-1
 input[name="carousel-css"][value="slide-12"]:checked ~ label[data-value="slide-11"]::before,
 input[name="carousel-css"][value="slide-13"]:checked ~ label[data-value="slide-12"]::before,
 input[name="carousel-css"][value="slide-14"]:checked ~ label[data-value="slide-13"]::before,
-input[name="carousel-css"][value="slide-15"]:checked ~ label[data-value="slide-14"]::before{
+input[name="carousel-css"][value="slide-15"]:checked ~ label[data-value="slide-14"]::before,
+input[name="carousel-css"][value="slide-16"]:checked ~ label[data-value="slide-15"]::before,
+input[name="carousel-css"][value="slide-17"]:checked ~ label[data-value="slide-16"]::before,
+input[name="carousel-css"][value="slide-18"]:checked ~ label[data-value="slide-17"]::before,
+input[name="carousel-css"][value="slide-19"]:checked ~ label[data-value="slide-18"]::before,
+input[name="carousel-css"][value="slide-20"]:checked ~ label[data-value="slide-19"]::before{
     display: inline-block;
     left: 1rem;
 }
@@ -208,7 +228,12 @@ input[name="carousel-css"][value="slide-10"]:checked ~ label[data-value="slide-1
 input[name="carousel-css"][value="slide-11"]:checked ~ label[data-value="slide-12"]::after,
 input[name="carousel-css"][value="slide-12"]:checked ~ label[data-value="slide-13"]::after,
 input[name="carousel-css"][value="slide-13"]:checked ~ label[data-value="slide-14"]::after,
-input[name="carousel-css"][value="slide-14"]:checked ~ label[data-value="slide-15"]::after{
+input[name="carousel-css"][value="slide-14"]:checked ~ label[data-value="slide-15"]::after,
+input[name="carousel-css"][value="slide-15"]:checked ~ label[data-value="slide-16"]::after,
+input[name="carousel-css"][value="slide-16"]:checked ~ label[data-value="slide-17"]::after,
+input[name="carousel-css"][value="slide-17"]:checked ~ label[data-value="slide-18"]::after,
+input[name="carousel-css"][value="slide-18"]:checked ~ label[data-value="slide-19"]::after,
+input[name="carousel-css"][value="slide-19"]:checked ~ label[data-value="slide-20"]::after{
     display: inline-block;
     right: 1rem;
 }
