Correction of a display error
Correction of an error, where the previous and next slide where not shown when the slides where changed

--- a/carousel.css
+++ b/carousel.css
@@ -23,7 +23,7 @@
 }
 
 .carousel-slide{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -74,9 +74,8 @@ input[name="carousel-css"]:checked::before{
     height: calc(100% - 2px);
 }
 
-/* Hide unnecessary rado buttons */
+/* Hide unnecessary radio buttons */
 
-input[name="carousel-css"]:last-child:checked ~ .carousel-wrapper .carousel-slide:nth-child(1),
 input[name="carousel-css"][value="slide-1"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(2),
 input[name="carousel-css"][value="slide-2"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(3),
 input[name="carousel-css"][value="slide-3"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(4),
@@ -95,12 +94,15 @@ input[name="carousel-css"][value="slide-15"]:checked ~ .carousel-wrapper .carous
 input[name="carousel-css"][value="slide-16"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(17),
 input[name="carousel-css"][value="slide-17"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(18),
 input[name="carousel-css"][value="slide-18"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(19),
-input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(20){
-    transition: 0.5s transform;
+input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(20),
+input[name="carousel-css"]:last-of-type:checked ~ .carousel-wrapper .carousel-slide:nth-child(1){
+    display: flex;
+    opacity: 1;
     transform: translate(100%, 0);
+    transition: 0.5s transform;
 }
 
-input[name="carousel-css"][value="slide-1"]:checked ~ .carousel-wrapper .carousel-slide:last-child,
+
 input[name="carousel-css"][value="slide-20"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(19),
 input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(18),
 input[name="carousel-css"][value="slide-18"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(17),
@@ -119,7 +121,10 @@ input[name="carousel-css"][value="slide-6"]:checked ~ .carousel-wrapper .carouse
 input[name="carousel-css"][value="slide-5"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(4),
 input[name="carousel-css"][value="slide-4"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(3),
 input[name="carousel-css"][value="slide-3"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(2),
-input[name="carousel-css"][value="slide-2"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(1){
+input[name="carousel-css"][value="slide-2"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(1),
+input[name="carousel-css"][value="slide-1"]:checked ~ .carousel-wrapper .carousel-slide:last-of-type{
+    display: flex;
+    opacity: 1;
     transition: 0.5s transform;
     transform: translate(-100%, 0);
 }
@@ -147,6 +152,7 @@ input[name="carousel-css"][value="slide-17"]:checked ~ .carousel-wrapper .carous
 input[name="carousel-css"][value="slide-18"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(18),
 input[name="carousel-css"][value="slide-19"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(19),
 input[name="carousel-css"][value="slide-20"]:checked ~ .carousel-wrapper .carousel-slide:nth-child(20){
+    display: flex;
     transition: 0.5s transform;
     transform: translate(0, 0);
     opacity: 1;
